Logback working locally, normal logging in docker compose.